[package]
name = "shurly"
version = "0.3.4"
edition = "2021"
license = "MIT"
homepage = "https://github.com/workplacebuddy/shurly"
description = "Shurly, this is a URL shortener with API management"
repository = "https://github.com/workplacebuddy/shurly"
readme = "README.md"
rust-version = "1.82"

[dependencies.anyhow]
version = "1.0.97"
default-features = false
features = [
    "std",
]

[dependencies.argon2]
version = "0.5.3"
default-features = false
features = [
    "std",
]

[dependencies.axum]
version = "0.7.9"
default-features = false
features = [
    "form",
    "json",
]

[dependencies.axum-client-ip]
version = "0.6.1"
default-features = false

[dependencies.axum-extra]
version = "0.9.6"
default-features = false
features = [
    "tracing",
    "typed-header",
]

[dependencies.chrono]
version = "0.4.40"
default-features = false
features = [
    "serde",
]

[dependencies.dotenvy]
version = "0.15.7"
default-features = false

[dependencies.jsonwebtoken]
version = "9.3.1"
default-features = false

[dependencies.rand_core]
version = "0.9.3"
default-features = false
features = [
    "std",
]

[dependencies.serde]
version = "1.0.219"
default-features = false
features = [
    "derive",
    "std",
]

[dependencies.serde_json]
version = "1.0.140"
default-features = false

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "chrono",
    "ipnetwork",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
]

[dependencies.tokio]
version = "1.44.2"
default-features = false
features = [
    "rt-multi-thread",
    "signal",
]

[dependencies.tower]
version = "0.5.2"
default-features = false
features = [
    "util",
]

[dependencies.tower-http]
version = "0.6.2"
default-features = false
features = [
    "trace",
]

[dependencies.tracing]
version = "0.1.41"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.19"
default-features = false
features = [
    "ansi",
    "env-filter",
    "fmt",
]

[dependencies.url]
version = "2.5.4"
default-features = false

[dependencies.uuid]
version = "1.16.0"
default-features = false
features = [
    "v4",
    "serde",
]

[dependencies.percent-encoding]
version = "2.3.1"
default-features = false

[dependencies.unicode-normalization]
version = "0.1.24"
default-features = false

[dev-dependencies.http-body-util]
version = "0.1.2"
default-features = false

[dev-dependencies.mime]
version = "0.3.17"
default-features = false
