[package]
name = "shurly"
version = "0.3.6"
edition = "2024"
license = "MIT"
homepage = "https://github.com/workplacebuddy/shurly"
description = "Shurly, this is a URL shortener with API management"
repository = "https://github.com/workplacebuddy/shurly"
readme = "README.md"
rust-version = "1.85"

[dependencies.anyhow]
version = "1.0.99"
default-features = false
features = [
    "std",
]

[dependencies.argon2]
version = "0.5.3"
default-features = false
features = [
    "std",
]

[dependencies.axum]
version = "0.8.4"
default-features = false
features = [
    "form",
    "http1",
    "json",
]

[dependencies.axum-client-ip]
version = "1.1.3"
default-features = false

[dependencies.axum-extra]
version = "0.10.1"
default-features = false
features = [
    "tracing",
    "typed-header",
]

[dependencies.chrono]
version = "0.4.41"
default-features = false
features = [
    "serde",
]

[dependencies.dotenvy]
version = "0.15.7"
default-features = false

[dependencies.jsonwebtoken]
version = "9.3.1"
default-features = false

[dependencies.rand_core]
version = "0.9.3"
default-features = false
features = [
    "std",
]

[dependencies.serde]
version = "1.0.219"
default-features = false
features = [
    "derive",
    "std",
]

[dependencies.serde_json]
version = "1.0.143"
default-features = false

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "chrono",
    "ipnetwork",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
]

[dependencies.tokio]
version = "1.47.1"
default-features = false
features = [
    "rt-multi-thread",
    "signal",
]

[dependencies.tower]
version = "0.5.2"
default-features = false
features = [
    "util",
]

[dependencies.tower-http]
version = "0.6.6"
default-features = false
features = [
    "trace",
]

[dependencies.tracing]
version = "0.1.41"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.20"
default-features = false
features = [
    "ansi",
    "env-filter",
    "fmt",
]

[dependencies.url]
version = "2.5.7"
default-features = false

[dependencies.uuid]
version = "1.18.1"
default-features = false
features = [
    "v4",
    "serde",
]

[dependencies.percent-encoding]
version = "2.3.2"
default-features = false

[dependencies.unicode-normalization]
version = "0.1.24"
default-features = false

[dev-dependencies.http-body-util]
version = "0.1.3"
default-features = false

[dev-dependencies.mime]
version = "0.3.17"
default-features = false
