[package]
name = "shurly"
version = "0.4.1"
edition = "2024"
license = "MIT"
homepage = "https://github.com/workplacebuddy/shurly"
description = "Shurly, this is a URL shortener with API management"
repository = "https://github.com/workplacebuddy/shurly"
readme = "README.md"
rust-version = "1.88"

[dependencies.anyhow]
version = "1.0.100"
default-features = false
features = [
    "std",
]

[dependencies.argon2]
version = "0.5.3"
default-features = false
features = [
    "std",
]

[dependencies.axum]
version = "0.8.8"
default-features = false
features = [
    "form",
    "http1",
    "json",
    "query",
]

[dependencies.axum-client-ip]
version = "1.3.1"
default-features = false
features = [
    "connect-info",
]

[dependencies.axum-extra]
version = "0.12.5"
default-features = false
features = [
    "tracing",
    "typed-header",
]

[dependencies.chrono]
version = "0.4.42"
default-features = false
features = [
    "serde",
]

[dependencies.dotenvy]
version = "0.15.7"
default-features = false

[dependencies.jsonwebtoken]
version = "10.2.0"
default-features = false
features = [
    "rust_crypto",
]


[dependencies.moka]
version = "0.12.12"
default-features = false
features = [
    "future",
]

[dependencies.rand_core]
version = "0.9.3"
default-features = false
features = [
    "std",
]

[dependencies.serde]
version = "1.0.228"
default-features = false
features = [
    "derive",
    "std",
]

[dependencies.serde_json]
version = "1.0.149"
default-features = false

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "chrono",
    "ipnetwork",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
]

[dependencies.tokio]
version = "1.49.0"
default-features = false
features = [
    "rt-multi-thread",
    "signal",
]

[dependencies.tokio-util]
version = "0.7.18"
default-features = false

[dependencies.tower]
version = "0.5.2"
default-features = false
features = [
    "util",
]

[dependencies.tower-http]
version = "0.6.8"
default-features = false
features = [
    "trace",
]

[dependencies.tracing]
version = "0.1.44"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.22"
default-features = false
features = [
    "ansi",
    "env-filter",
    "fmt",
]

[dependencies.url]
version = "2.5.8"
default-features = false

[dependencies.uuid]
version = "1.19.0"
default-features = false
features = [
    "v4",
    "serde",
]

[dependencies.percent-encoding]
version = "2.3.2"
default-features = false

[dependencies.unicode-normalization]
version = "0.1.25"
default-features = false

[dev-dependencies.http-body-util]
version = "0.1.3"
default-features = false

[dev-dependencies.mime]
version = "0.3.17"
default-features = false
